2023-10-07 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSKeyValueObserving.h
	* Source/NSKeyValueObserving.m: Add nethods
	removeObserver:forKeyPath:context: and
	removeObserver:forObjectsAtIndexes:forKeyPath:context:
	* Tests/base/KVC/mutable.m: Add tests for the above
	methods.

2023-08-18 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSCache.h: Add _lock ivar
	* Source/NSCache.m: Protect cache operations with a lock for
	thread safety.
	
2023-08-10 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSNumberFormatter.h:
	* Source/NSNumberFormatter.m:
	Change NSNumberFormatter minimum/maximum properties from
	NSDecimalNumber to NSNumber to match Apple platforms.

2023-07-30  Yavor Doganov  <yavor@gnu.org>

	* Tools/HTMLLinker.1: Fix a groff warning.

2023-07-30  Yavor Doganov  <yavor@gnu.org>

       * Tools/gdnc.m ([GDNCServer init]):
       * Tools/gspath.1: Fix spelling errors.

2023-07-26 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSData.m:
	Fix NSData initWithContentsOfURL: caching data of file URLs.

2023-07-26 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSURL.m:
	* Tests/base/NSURL/basic.m:
	Fix NSURL path on Windows for UNC paths.

2023-07-25 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSFileManager.h:
	* Source/NSFileManager.m:
	Fixed NSFileManager thread safety.

2023-07-17  Yavor Doganov  <yavor@gnu.org>

	* Tests/base/NSTimeZone/localtime.m (testTZDB): Skip tests relying
	on 64bit time_t on all 32bit architectures.
	* Source/NSTimeZone.m: Move #include "tzdb.h" a bit earlier so
	that the POSIX_TZONES preprocessor conditional is correct.
	([GSTimeZoneDetail
	initWithTimeZone:withAbbrev:withOffset:withDST:]): Retain abbrev.
	([GSTimeZoneDetail dealloc]): Release abbrev.
	([NSTimeZone timeZoneArray]): Skip files *.zi, *.list and
	leapseconds which are not zone files.

2023-06-10 Riccardo Mottola <rm@gnu.org>

	* Tests/base/NSURL/Helpers/Launch.h: